# tefy

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
TEfy/: TEfy.py  __init__.py
tefy/: __init__.py
tests/: test_TEfy.py  test_tefy.py
tests/in/: test.doc  test.docx  test.odt
