[tool.poetry]
name = "TEfy"
version = "0.1.4"
description = "A very basic wrapper for conversions from doc, docx and odt to TEI XML"
authors = ["Theo Costea <theo.costea@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/03b8/tefy"
keywords = ["conversion", "tei-xml", "doc", "docx", "odt", "markup"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Markup :: XML"
]

[tool.poetry.dependencies]
python = "^3.6"
lxml = "^4.2.4"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
